<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_header"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_item1"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/test1_item1"
        android:textSize="@dimen/text_size_large"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@drawable/selector_btn_orange"
        android:layout_margin="@dimen/margin_mid"
        android:paddingStart="@dimen/margin_mid"
        android:paddingEnd="@dimen/margin_mid"/>

    <TextView
        android:id="@+id/tv_item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:text="@string/test1_item2"
        android:textSize="@dimen/text_size_large"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@drawable/selector_btn_orange"
        android:layout_margin="@dimen/margin_mid"
        android:paddingStart="@dimen/margin_mid"
        android:paddingEnd="@dimen/margin_mid"/>

    <TextView
        android:id="@+id/tv_item3"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/test1_item3"
        android:textSize="@dimen/text_size_large"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@drawable/selector_btn_orange"
        android:layout_margin="@dimen/margin_mid"
        android:paddingStart="@dimen/margin_mid"
        android:paddingEnd="@dimen/margin_mid"/>

    <TextView
        android:id="@+id/tv_item4"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/test1_item4"
        android:textSize="@dimen/text_size_large"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@drawable/selector_btn_orange"
        android:layout_margin="@dimen/margin_mid"
        android:paddingStart="@dimen/margin_mid"
        android:paddingEnd="@dimen/margin_mid"/>

    <TextView
        android:id="@+id/tv_item5"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/test1_item5"
        android:textSize="@dimen/text_size_large"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@drawable/selector_btn_orange"
        android:layout_margin="@dimen/margin_mid"
        android:paddingStart="@dimen/margin_mid"
        android:paddingEnd="@dimen/margin_mid"/>

</LinearLayout>