<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_test_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGrey"
    tools:context="com.cl.test.activity.TestOneActivity">

    <HorizontalScrollView
        android:id="@+id/hsv_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawHorizontalTrack="false">

        <include layout="@layout/layout_header"/>

    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/rl_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5">

        <com.cl.test.view.MyViewPager
            android:id="@+id/vp_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.cl.test.view.IndicatorView
            android:id="@+id/iv_top"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <TextView
            android:id="@+id/tv_middle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|start"
            android:text="TextView1"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/tv_middle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_middle1"
            android:gravity="center"
            android:text="TextView2"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/tv_middle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_middle2"
            android:gravity="right|end"
            android:text="TextView3"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_red"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_mid"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/test1_red"
            android:textSize="@dimen/text_size"
            android:background="@android:color/white"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_blue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_mid"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/test1_blue"
            android:textSize="@dimen/text_size"
            android:background="@android:color/white"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_green"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_mid"
            android:textColor="@android:color/holo_green_light"
            android:text="@string/test1_green"
            android:textSize="@dimen/text_size"
            android:background="@android:color/white"
            android:gravity="center"/>


    </LinearLayout>


</LinearLayout>
